--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "laravel/framework"                     : "5.2.*",
         "maatwebsite/excel"                     : "~2.1.0",
         "barryvdh/laravel-dompdf"               : "^0.7.0",
-        "alfredo-ramos/parsedown-extra-laravel" : "~0.6.0"
+        "nesbot/carbon"                         : "~1.21"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
