--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php"                                   : ">=5.5.9",
         "laravel/framework"                     : "5.2.*",
         "maatwebsite/excel"                     : "~2.1.0",
-        "barryvdh/laravel-dompdf"               : "^0.7.0",
+        "barryvdh/laravel-dompdf"               : "0.6.2",
         "nesbot/carbon"                         : "^1.22"
     },
     "require-dev": {
